tests/ui/privacy/privacy1.stderr
error[E0603]: module `baz` is private
  --> $DIR/privacy1.rs:132:18
   |
LL |         use bar::baz::{foo, bar};
   |                  ^^^ private module
   |
note: the module `baz` is defined here
  --> $DIR/privacy1.rs:50:5
   |
LL |     mod baz {
   |     ^^^^^^^

error[E0603]: module `baz` is private
  --> $DIR/privacy1.rs:132:18
   |
LL |         use bar::baz::{foo, bar};
   |                  ^^^ private module
   |
note: the module `baz` is defined here
  --> $DIR/privacy1.rs:50:5
   |
LL |     mod baz {
   |     ^^^^^^^

error[E0603]: module `baz` is private
  --> $DIR/privacy1.rs:141:18
   |
LL |         use bar::baz;
   |                  ^^^ private module
   |
note: the module `baz` is defined here
  --> $DIR/privacy1.rs:50:5
   |
LL |     mod baz {
   |     ^^^^^^^

error[E0603]: module `i` is private
  --> $DIR/privacy1.rs:165:20
   |
LL |     use self::foo::i::A;
   |                    ^ private module
   |
note: the module `i` is defined here
  --> $DIR/privacy1.rs:170:9
   |
LL |         mod i {
   |         ^^^^^

error[E0603]: module `baz` is private
  --> $DIR/privacy1.rs:104:16
   |
LL |         ::bar::baz::A::foo();
   |                ^^^ private module
   |
note: the module `baz` is defined here
  --> $DIR/privacy1.rs:50:5
   |
LL |     mod baz {
   |     ^^^^^^^

error[E0603]: module `baz` is private
  --> $DIR/privacy1.rs:105:16
   |
LL |         ::bar::baz::A::bar();
   |                ^^^ private module
   |
note: the module `baz` is defined here
  --> $DIR/privacy1.rs:50:5
   |
LL |     mod baz {
   |     ^^^^^^^

error[E0603]: module `baz` is private
  --> $DIR/privacy1.rs:107:16
   |
LL |         ::bar::baz::A.foo2();
   |                ^^^ private module
   |
note: the module `baz` is defined here
  --> $DIR/privacy1.rs:50:5
   |
LL |     mod baz {
   |     ^^^^^^^

error[E0603]: module `baz` is private
  --> $DIR/privacy1.rs:108:16
   |
LL |         ::bar::baz::A.bar2();
   |                ^^^ private module
   |
note: the module `baz` is defined here
  --> $DIR/privacy1.rs:50:5
   |
LL |     mod baz {
   |     ^^^^^^^

error[E0603]: trait `B` is private
  --> $DIR/privacy1.rs:112:16
   |
LL |         ::bar::B::foo();
   |                ^ private trait
   |
note: the trait `B` is defined here
  --> $DIR/privacy1.rs:40:5
   |
LL |     trait B {
   |     ^^^^^^^

error[E0603]: function `epriv` is private
  --> $DIR/privacy1.rs:118:20
   |
LL |             ::bar::epriv();
   |                    ^^^^^ private function
   |
note: the function `epriv` is defined here
  --> $DIR/privacy1.rs:65:9
   |
LL |         fn epriv();
   |         ^^^^^^^^^^^

error[E0603]: module `baz` is private
  --> $DIR/privacy1.rs:127:16
   |
LL |         ::bar::baz::foo();
   |                ^^^ private module
   |
note: the module `baz` is defined here
  --> $DIR/privacy1.rs:50:5
   |
LL |     mod baz {
   |     ^^^^^^^

error[E0603]: module `baz` is private
  --> $DIR/privacy1.rs:128:16
   |
LL |         ::bar::baz::bar();
   |                ^^^ private module
   |
note: the module `baz` is defined here
  --> $DIR/privacy1.rs:50:5
   |
LL |     mod baz {
   |     ^^^^^^^

error[E0603]: trait `B` is private
  --> $DIR/privacy1.rs:157:17
   |
LL |     impl ::bar::B for f32 { fn foo() -> f32 { 1.0 } }
   |                 ^ private trait
   |
note: the trait `B` is defined here
  --> $DIR/privacy1.rs:40:5
   |
LL |     trait B {
   |     ^^^^^^^

error[E0624]: associated function `bar` is private
  --> $DIR/privacy1.rs:77:23
   |
LL |             fn bar() {}
   |             -------- private associated function defined here
...
LL |         self::baz::A::bar();
   |                       ^^^ private associated function

error[E0624]: associated function `bar` is private
  --> $DIR/privacy1.rs:95:13
   |
LL |         fn bar() {}
   |         -------- private associated function defined here
...
LL |     bar::A::bar();
   |             ^^^ private associated function

error[E0624]: associated function `bar` is private
  --> $DIR/privacy1.rs:102:19
   |
LL |         fn bar() {}
   |         -------- private associated function defined here
...
LL |         ::bar::A::bar();
   |                   ^^^ private associated function

error[E0624]: associated function `bar` is private
  --> $DIR/privacy1.rs:105:24
   |
LL |             fn bar() {}
   |             -------- private associated function defined here
...
LL |         ::bar::baz::A::bar();
   |                        ^^^ private associated function

error[E0624]: method `bar2` is private
  --> $DIR/privacy1.rs:108:23
   |
LL |             fn bar2(&self) {}
   |             -------------- private method defined here
...
LL |         ::bar::baz::A.bar2();
   |                       ^^^^ private method

error: aborting due to 18 previous errors

Some errors have detailed explanations: E0603, E0624.
For more information about an error, try `rustc --explain E0603`.
